testing out how best to list down the product types

--- a/kemika-root/kemika-web/src/main/webapp/css/default.css
+++ b/kemika-root/kemika-web/src/main/webapp/css/default.css
@@ -9,6 +9,12 @@ html,body {
   margin: 0 auto -60px;
 }
 
+#tables {
+  background-color:#EEEFEF;
+  position:absolute;
+  left:30px;
+}
+
 #push, #footer {
   height: 60px;
 }
