core value details

--- a/kemika-root/kemika-web/src/main/webapp/css/default.css
+++ b/kemika-root/kemika-web/src/main/webapp/css/default.css
@@ -9,6 +9,10 @@ html,body {
   margin: 0 auto -60px;
 }
 
+#contact {
+  font-siz: 14px;
+}
+
 #tables {
   background-color:#EEEFEF;
   position:absolute;
