--- a/kemika-root/kemika-web/src/main/webapp/css/default.css
+++ b/kemika-root/kemika-web/src/main/webapp/css/default.css
@@ -1,5 +1,6 @@
 @import url('../libs/CircularContentCarousel/css/style.css');
 @import url('../libs/CircularContentCarousel/css/demo.css');
+@import url('navbar.css');
 
 html,body {
   height: 100%;
