--- a/kemika-root/kemika-web/src/main/webapp/libs/CircularContentCarousel/css/demo.css
+++ b/kemika-root/kemika-web/src/main/webapp/libs/CircularContentCarousel/css/demo.css
@@ -7,6 +7,13 @@ body{
 	font-family: 'PT Sans Narrow', Arial, sans-serif;
 	font-size:12px;
 }
+
+button {
+	color:#000;
+  font-family: 'PT Sans Narrow', Arial, sans-serif;
+  font-size:12px;
+}
+
 a{
 	color:#000;
 	text-decoration:none;
