--- a/kemika-root/kemika-web/src/main/webapp/libs/CircularContentCarousel/css/reset.css
+++ b/kemika-root/kemika-web/src/main/webapp/libs/CircularContentCarousel/css/reset.css
@@ -1,5 +1,5 @@
 /* CSS reset */
-body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,blockquote,th,td { 
+body,div,dl,dt,dd,ul,ol,li,h1,/*h2,h3,*/h4,/*h5,h6,*/pre,form,fieldset,input,textarea,p,blockquote,th,td { 
 	margin:0;
 	padding:0;
 }
@@ -30,7 +30,7 @@ ol,ul {
 caption,th {
 	text-align:left;
 }
-h1,h2,h3,h4,h5,h6 {
+h1/*,h2,h3*/,h4/*,h5,h6*/ {
 	font-size:100%;
 	font-weight:normal;
 }
