--- a/kemika-root/kemika-web/src/main/webapp/css/default.css
+++ b/kemika-root/kemika-web/src/main/webapp/css/default.css
@@ -10,6 +10,12 @@ body {
 	overflow-y: scroll;
 }
 
+textarea {
+	width: 100%;
+	height: 8em;
+	margin-bottom: 5px !important;
+}
+
 .span12 {
 	position: relative;
 }
@@ -17,6 +23,8 @@ body {
 .content {
 	padding: 5px;
 }
+
+.error{color: red;}
 
 .pointer {cursor: pointer;}
 .inline-block {display: inline-block;}
@@ -27,7 +35,10 @@ body {
 /* padding */
 .pd2 {padding: 2px;}
 
-
+/* widths */
+.w10 {width: 10%;}
+.w15 {width: 15%;}
+.w20 {width: 20%;}
 
 /* images */
 .kemika-thumb {
